--- a/src/routes/layout.scss
+++ b/src/routes/layout.scss
@@ -1,29 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-	--background-color: #FEF7FF;
-	--background-dim-color: #DED8E1;
-	--container-lowest-bg-color: #FFFFFF;
-	--container-low-bg-color: #F7F2FA;
-	--container-bg-color: #F3EDF7;
-	--container-high-bg-color: #ECE6F0;
-	--container-highest-bg-color: #E6E0E9;
-	--font-color: #1C1B1F;
+	--background-color: #fef7ff;
+	--background-dim-color: #ded8e1;
+	--container-lowest-bg-color: #ffffff;
+	--container-low-bg-color: #f7f2fa;
+	--container-bg-color: #f3edf7;
+	--container-high-bg-color: #ece6f0;
+	--container-highest-bg-color: #e6e0e9;
+	--font-color: #1c1b1f;
 }
 
 * {
 	font-family: 'Poppins';
 	scrollbar-width: auto;
 	scrollbar-color: #36343b rgba(0, 0, 0, 0);
-	
+
 	&::-webkit-scrollbar {
 		width: 8px;
 	}
-	
+
 	&::-webkit-scrollbar-track {
 		background: rgba($color: #000000, $alpha: 0);
 	}
-	
+
 	&::-webkit-scrollbar-thumb {
 		background-color: #36343b;
 		border-radius: 20px;
